Fixed margin top of image in carousel to not overlap

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,7 +38,7 @@ h2 {
 .carousel img {
   height: 300px;
   padding: 30px;
-  margin-top: 80px;
+  margin-top: 100px;
   margin-bottom: 50px;
   border-radius: 50%;
   margin-left: auto;
